--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,9 @@
 {
-  "semi": true,
-  "trailingComma": "all",
-  "singleQuote": false,
-  "printWidth": 180,
-  "tabWidth": 4,
-  "arrowParens": "avoid"
+    "useTabs": false,
+    "tabWidth": 4,
+    "singleQuote": true,
+    "printWidth": 120,
+    "trailingComma": "all",
+    "semi": true,
+    "arrowParens": "avoid"
 }
